# GitHub-AI-Agent

./: .env.example  .gitignore  AUTHENTICATION_UPDATES.md  FILE_EXTRACTION_FIX.md  FIX_403_ERROR.md  GITHUB_APP_INTEGRATION.md  GITHUB_APP_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  MCP_INTEGRATION.md  MCP_SDK_UPDATE.md  MCP_SUMMARY.md  PR_FOLLOWUP_IMPLEMENTATION.md  README.md  REFACTOR_SUMMARY.md  RESET_SCRIPT_README.md  SAAA_WORKFLOW.md  SETUP_WINDOWS.md  SINGLE_TOOL_REFACTOR.md  debug_auth.py  demo_pr_comments.py  enhanced_logging_demo.py  example_usage.py  github_app_diagnostics.py  langgraph_state_logging_examples.py  main.py  mcp_config.example.json  mcp_config.json  prompts.yaml  pyproject.toml  quick_test.py  reset_saaa_repo.py  test_agent.ps1  test_agent_mcp.py  test_agent_workflow.py  test_ai_filtering.py  test_aiva_arguments.py  test_aiva_connection.py  test_aiva_specific.py  test_auth_selection.py  (+29 more)
github_ai_agent/: __init__.py  agent.py  config.py  github_client.py  github_client_new.py  github_client_old.py  logging_utils.py  main.py  mcp_client.py
tests/: __init__.py  test_basic.py  test_mcp_client.py  test_mcp_integration.py  test_pr_comments.py  test_prompt_config.py
